[package]
name = "weblumclient"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
rexif = "0.7.3"
image = "0.24.7"
leptos = "0.5.4"
leptos_router = { version = "0.5.3", features = ["csr"] }
base64 = "0.21.3"
log = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"

gloo-storage = "0.2.2"
serde = "1.0"
thiserror = "1.0"
js-sys = "0.3.64"
url = "1.6.0"

img-parts = "0.3.0"

time = {version = "0.3.35", features = ["formatting", "macros", "serde", "parsing"] }
secrecy = { version = "0.8.0", features = ["serde"] }
hmac = "0.12.1"
sha2 = "0.10.7"
hex = "0.4.3"
bytes = { version = "1", features = ["serde"] }
urlencoding = "2.1.3"
gloo-timers = {version = "0.3.0", features = ["futures"] }
leptonic = "0.3.0"
leptonic-theme = "0.2.0"
leptos_icons = { version = "0.1", features = [
    "FaRotateRightSolid",
    "TbResize",
    "FaBroomSolid",
    "AiClearOutlined",
    "FaEraserSolid",
    "AiCloudUploadOutlined",
    "AiSettingOutlined",
    "AiDeleteOutlined",
    "AiEditOutlined",
    "TbTextCaption",
    "RiFileSettingsDocumentLine",
    "CgSpinner",
    "AiLinkOutlined",
    "BiDownloadSolid",
]}

serde_json = "1.0.107"
uuid = "1.4.1"
wasm-bindgen-futures = "0.4.37"

[dependencies.gloo-net]
version = "0.4.0"
features = ['http']

[dependencies.web-sys]
version = "0.3.64"
features = ['ReadableStreamDefaultReader', 'EventTarget', 'MouseEvent', 'Node', 'UiEvent', 'Event', 'File', 'HtmlInputElement', 'Element', 'FileList', 'Navigator', 'HtmlSelectElement', 'HtmlElement', 'Navigator', 'Clipboard']

[dependencies.wasm-bindgen]
version = "0.2.87"

[dependencies.quick-xml]
version = "0.27.1"
features = [
  'serialize',
]

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
web-sys = "0.3"

[build-dependencies]
leptonic-theme = "0.2.0"
leptos-tiptap-build = "0.2.3"
